# AI-Productization-Observatory

./: .env.example  .gitignore  00_project_definition.md  01_phase_plan_and_exit_criteria.md  02_domain_model_and_boundaries.md  03_source_registry_and_collection_spec.md  03a_product_hunt_spec.md  03b_github_spec.md  03c_github_collection_query_strategy.md  04_taxonomy_v0.md  05_controlled_vocabularies_v0.md  06_score_rubric_v0.md  07_annotation_guideline_v0.md  08_schema_contracts.md  09_pipeline_and_module_contracts.md  10_prompt_and_model_routing_contracts.md  10a_provider_eval_gate.md  11_metrics_and_marts.md  12_review_policy.md  13_error_and_retry_policy.md  14_test_plan_and_acceptance.md  15_tech_stack_and_runtime.md  16_repo_structure_and_module_mapping.md  17_open_decisions_and_freeze_board.md  18_runtime_task_and_replay_contracts.md  19_ai_context_allowlist_and_exclusion_policy.md  20_numeric_parameter_register.md  21_screening_calibration_asset_layer.md  AGENTS.md  LICENSE  Makefile  OD_Key_design_decisions.md  OD_Surface_complexity.md  OD_Unshakable_backbone.md  README.md  SECURITY.md  SKILL.md  candidate_prescreeen_workflow_prompt.md  document_governance_workflow_20260324.md  document_overview.md  (+6 more)
10_prompt_specs/: 00_base_system_context.md  01_Foundation_and_Minimal_Baseline.md  01_task_template.md  02_Semantic_Specs_Alignment.md  02_blocker_response_template.md  03_High_Risk_Decision_Signoff.md  04_Baseline_Consolidation_and_Freeze.md  05_Phase0_Completion_and_Validation.md  Specialized_SKILL.md  candidate_prescreener_v1.md
configs/: delivery_form_v0.yaml  (+8 more)
(+1228 files in other folders)
