[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-productization-observatory"
version = "0.1.0"
description = "Minimal runnable baseline for the AI Productization Observatory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.10",
]

[project.optional-dependencies]
# Shadow-validation only; this is not a production driver freeze.
shadow-validation = [
  "psycopg[binary]>=3.1,<4",
]
# Phase2-4 read-only preview surface only; this does not freeze the production dashboard framework.
phase2-4-preview = [
  "streamlit>=1.32,<2",
]

[project.scripts]
apo-observatory = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
